# conjure-rust-runtime

./: Cargo.toml  README.md
.circleci/: config.yml
.github/: dependabot.yml
changelog/0.1.1/: pr-10.v2.yml
changelog/0.1.2/: pr-13.v2.yml
changelog/0.2.0/: pr-16.v2.yml
changelog/0.2.1/: pr-19.v2.yml
changelog/0.2.2/: pr-64.v2.yml
changelog/0.3.0/: pr-47.v2.yml  pr-50.v2.yml  pr-55.v2.yml
changelog/0.3.1/: pr-93.v2.yml
changelog/0.4.2/: pr-98.v2.yml
changelog/1.0.0/: pr-103.v2.yml
changelog/1.2.0/: pr-105.v2.yml
changelog/2.0.0/: pr-106.v2.yml  pr-115.v2.yml
changelog/3.1.0/: pr-132.v2.yml
changelog/4.6.0/: pr-162.v2.yml
changelog/4.7.0/: pr-166.v2.yml
changelog/5.0.0/: pr-177.v2.yml  pr-197.v2.yml  pr-198.v2.yml
changelog/5.2.0/: pr-221.v2.yml
changelog/@unreleased/: pr-104.v2.yml  pr-119.v2.yml  pr-121.v2.yml  pr-136.v2.yml  pr-14.v2.yml  pr-150.v2.yml  pr-155.v2.yml  pr-164.v2.yml  pr-176.v2.yml  pr-202.v2.yml  pr-209.v2.yml  pr-219.v2.yml  pr-38.v2.yml  pr-43.v2.yml  pr-48.v2.yml  pr-63.v2.yml  pr-64.v2.yml  pr-91.v2.yml  pr-96.v2.yml
conjure-runtime/: Cargo.toml
conjure-runtime-config/: Cargo.toml
conjure-runtime-config/src/: lib.rs  raw.rs  test.rs
conjure-runtime/src/: body.rs  builder.rs  client.rs  client_cache.rs  client_factory.rs  conjure.rs  errors.rs  host_metrics.rs  lib.rs  node_selector.rs  payload.rs  per_host_clients.rs  request.rs  response.rs  rng.rs  send.rs  test.rs  user_agent.rs  weak_cache.rs
conjure-runtime/src/blocking/: body.rs  client.rs  conjure.rs  mod.rs  request.rs  response.rs  shim.rs
conjure-runtime/src/connect/: metrics.rs  mod.rs  proxy.rs
conjure-runtime/src/raw/: body.rs  default.rs  hyper_rustls.rs  mod.rs
conjure-runtime/src/service/: body_write.rs  boxed.rs  gzip.rs  http_error.rs  map_error.rs  metrics.rs  mod.rs  request.rs  response.rs  response_body.rs  retry.rs  root_span.rs  span.rs  timeout.rs  tls_metrics.rs  trace_propagation.rs  user_agent.rs  wait_for_spans.rs
conjure-runtime/src/service/node/: metrics.rs  mod.rs  selector.rs  uri.rs
conjure-runtime/src/service/node/limiter/: ciad.rs  deficit_semaphore.rs  mod.rs
conjure-runtime/src/service/node/selector/: empty.rs  mod.rs  pin_until_error.rs  single.rs
conjure-runtime/src/service/node/selector/balanced/: mod.rs  reservoir.rs
conjure-runtime/src/service/proxy/: connector.rs  mod.rs  request.rs
conjure-runtime/src/util/: atomic_f64.rs  mod.rs  spans.rs  weak_reducing_gauge.rs
conjure-verification/: Cargo.toml  build.rs  ignored-test-cases.yml
conjure-verification-api/: Cargo.toml  build.rs
conjure-verification-api/src/: lib.rs
conjure-verification/src/: lib.rs
simulation/: Cargo.toml
simulation/results/: report.md
simulation/results/txt/: all_nodes_500[CONCURRENCY_LIMITER_PIN_UNTIL_ERROR].txt  all_nodes_500[CONCURRENCY_LIMITER_ROUND_ROBIN].txt  all_nodes_500[UNLIMITED_ROUND_ROBIN].txt  black_hole[CONCURRENCY_LIMITER_PIN_UNTIL_ERROR].txt  black_hole[CONCURRENCY_LIMITER_ROUND_ROBIN].txt  black_hole[UNLIMITED_ROUND_ROBIN].txt  drastic_slowdown[CONCURRENCY_LIMITER_PIN_UNTIL_ERROR].txt  drastic_slowdown[CONCURRENCY_LIMITER_ROUND_ROBIN].txt  drastic_slowdown[UNLIMITED_ROUND_ROBIN].txt  fast_400s_then_revert[CONCURRENCY_LIMITER_PIN_UNTIL_ERROR].txt  fast_400s_then_revert[CONCURRENCY_LIMITER_ROUND_ROBIN].txt  fast_400s_then_revert[UNLIMITED_ROUND_ROBIN].txt  fast_503s_then_revert[CONCURRENCY_LIMITER_PIN_UNTIL_ERROR].txt  fast_503s_then_revert[CONCURRENCY_LIMITER_ROUND_ROBIN].txt  fast_503s_then_revert[UNLIMITED_ROUND_ROBIN].txt  one_big_spike[CONCURRENCY_LIMITER_PIN_UNTIL_ERROR].txt  one_big_spike[CONCURRENCY_LIMITER_ROUND_ROBIN].txt  one_big_spike[UNLIMITED_ROUND_ROBIN].txt  one_endpoint_dies_on_each_server[CONCURRENCY_LIMITER_PIN_UNTIL_ERROR].txt  one_endpoint_dies_on_each_server[CONCURRENCY_LIMITER_ROUND_ROBIN].txt  one_endpoint_dies_on_each_server[UNLIMITED_ROUND_ROBIN].txt  server_side_rate_limits[CONCURRENCY_LIMITER_PIN_UNTIL_ERROR].txt  server_side_rate_limits[CONCURRENCY_LIMITER_ROUND_ROBIN].txt  server_side_rate_limits[UNLIMITED_ROUND_ROBIN].txt  short_outage_on_one_node[CONCURRENCY_LIMITER_PIN_UNTIL_ERROR].txt  short_outage_on_one_node[CONCURRENCY_LIMITER_ROUND_ROBIN].txt  short_outage_on_one_node[UNLIMITED_ROUND_ROBIN].txt  simplest_possible_case[CONCURRENCY_LIMITER_PIN_UNTIL_ERROR].txt  simplest_possible_case[CONCURRENCY_LIMITER_ROUND_ROBIN].txt  simplest_possible_case[UNLIMITED_ROUND_ROBIN].txt  slow_503s_then_revert[CONCURRENCY_LIMITER_PIN_UNTIL_ERROR].txt  slow_503s_then_revert[CONCURRENCY_LIMITER_ROUND_ROBIN].txt  slow_503s_then_revert[UNLIMITED_ROUND_ROBIN].txt  slowdown_and_error_thresholds[CONCURRENCY_LIMITER_PIN_UNTIL_ERROR].txt  slowdown_and_error_thresholds[CONCURRENCY_LIMITER_ROUND_ROBIN].txt  slowdown_and_error_thresholds[UNLIMITED_ROUND_ROBIN].txt  uncommon_flakes[CONCURRENCY_LIMITER_PIN_UNTIL_ERROR].txt  uncommon_flakes[UNLIMITED_ROUND_ROBIN].txt
simulation/src/: harness.rs  lib.rs  main.rs  metrics.rs  recorder.rs  server.rs  simulation.rs
test/: cert.cer  key.pem  test-invalid-cert.cer  test-invalid-key.pem
