[workspace.package]
version = "4.7.0"

[workspace]
resolver = "2"
members = [
    "conjure-runtime",
    "conjure-runtime-config",
    "conjure-verification",
    "conjure-verification-api",
]

[profile.release]
debug = 1

[profile.bench]
debug = 1

[patch.crates-io]
conjure-codegen = { git = "https://github.com/palantir/conjure-rust", branch = "dependabot/cargo/http-1.0.0" }
conjure-error = { git = "https://github.com/palantir/conjure-rust", branch = "dependabot/cargo/http-1.0.0" }
conjure-http = { git = "https://github.com/palantir/conjure-rust", branch = "dependabot/cargo/http-1.0.0" }
conjure-object = { git = "https://github.com/palantir/conjure-rust", branch = "dependabot/cargo/http-1.0.0" }
conjure-serde = { git = "https://github.com/palantir/conjure-rust", branch = "dependabot/cargo/http-1.0.0" }
