[workspace.package]
version = "4.7.0"

[workspace]
resolver = "2"
members = [
    "conjure-runtime",
    "conjure-runtime-config",
    "conjure-verification",
    "conjure-verification-api",
]

[profile.release]
debug = 1

[profile.bench]
debug = 1

[patch.crates-io]
witchcraft-log = { git = "https://github.com/palantir/witchcraft-rust-logging", branch = "conjure-4-rc" }
