[package]
name = "conjure-runtime-config"
version = "2.0.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Configuration types for conjure-runtime"
repository = "https://github.com/palantir/conjure-rust-runtime"
readme = "../README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
humantime-serde = "1.0"
url = { version = "2.0", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"
