[package]
name = "conjure-runtime"
version = "3.1.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
license = "Apache-2.0"
description = "An HTTP client compatible with Conjure-generated services"
repository = "https://github.com/palantir/conjure-rust-runtime"
readme = "../README.md"

[dependencies]
arc-swap = "1.0"
async-compression = { version = "0.3", default-features = false, features = [
    "gzip",
    "tokio",
] }
async-trait = "0.1"
base64 = "0.13"
bytes = "1.0"
conjure-error = "2"
conjure-http = "2"
conjure-object = "2"
conjure-serde = "2"
futures = "0.3"
http = "0.2"
http-body = "0.4"
http-zipkin = "0.3"
hyper = { version = "0.14", features = ["http1", "http2", "client", "tcp"] }
hyper-openssl = "0.9"
once_cell = "1.0"
openssl = "0.10"
parking_lot = "0.12"
percent-encoding = "2.1"
pin-project = "1.0"
rand = "0.8"
rand_pcg = "0.3"
refreshable = "1.0"
regex = "1.0"
serde = "1.0"
serde-value = "0.7"
witchcraft-log = "2"
witchcraft-metrics = "1"
tokio = { version = "1.0", features = ["io-util", "rt-multi-thread", "time"] }
tokio-io-timeout = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
tower-layer = "0.3"
tower-service = "0.3"
url = "2.0"
zipkin = "0.4"

conjure-runtime-config = { version = "3.1.0", path = "../conjure-runtime-config" }

[dev-dependencies]
flate2 = "1.0"
futures-test = "0.3"
hyper = { version = "0.14", features = ["server"] }
serde_yaml = "0.9"
tokio-openssl = "0.6"
tokio-test = "0.4"
tokio = { version = "1.0", features = ["full"] }
tower-util = "0.3"


# for doc examples
conjure-codegen = { version = "2", features = ["example-types"] }
