[package]
name = "conjure-runtime"
version.workspace = true
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
license = "Apache-2.0"
description = "An HTTP client compatible with Conjure-generated services"
repository = "https://github.com/palantir/conjure-rust-runtime"
readme = "../README.md"

[dependencies]
arc-swap = "1.0"
async-trait = "0.1"
base64 = "0.21"
bytes = "1.0"
conjure-error = "3.6"
conjure-http = "3.6"
conjure-object = "3.6"
conjure-runtime-config = { version = "4.7.0", path = "../conjure-runtime-config" }
conjure-serde = "3.6"
flate2 = "1.0"
futures = "0.3"
http-body = "0.4"
http-zipkin = "0.3"
http = "0.2"
hyper-rustls = { version = "0.24.0", default-features = false, features = [
    "http1",
    "http2",
    "tls12",
] }
hyper = { version = "0.14", features = ["http1", "http2", "client", "tcp"] }
once_cell = "1.0"
parking_lot = "0.12"
percent-encoding = "2.1"
pin-project = "1.0"
rand = "0.8"
rand_pcg = "0.3"
refreshable = "1.0"
regex = "1.0"
rustls-pemfile = "1.0.2"
rustls = "0.22.0"
serde-value = "0.7"
serde = "1.0"
tokio-io-timeout = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1.0", features = ["io-util", "rt-multi-thread", "time"] }
tower-layer = "0.3"
tower-service = "0.3"
url = "2.0"
webpki-roots = "0.25.1"
witchcraft-log = "3"
witchcraft-metrics = "1"
zipkin = "0.4"

[dev-dependencies]
conjure-codegen = { version = "3", features = ["example-types"] }
futures-test = "0.3"
hyper = { version = "0.14", features = ["server"] }
openssl = "0.10.50"
serde_yaml = "0.9"
tokio-openssl = "0.6"
tokio-test = "0.4"
tokio = { version = "1.0", features = ["full"] }
tower-util = "0.3"
