[package]
name = "conjure-runtime"
version.workspace = true
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2021"
license = "Apache-2.0"
description = "An HTTP client compatible with Conjure-generated services"
repository = "https://github.com/palantir/conjure-rust-runtime"
readme = "../README.md"

[dependencies]
arc-swap = "1.0"
base64 = "0.22"
bytes = "1.0"
conjure-error = "4.0.0-rc3"
conjure-http = "4.0.0-rc3"
conjure-object = "4.0.0-rc3"
conjure-runtime-config = { version = "4.7.0", path = "../conjure-runtime-config" }
conjure-serde = "4.0.0-rc3"
flate2 = "1.0"
futures = "0.3"
http-body = "1"
http-body-util = "0.1"
http-zipkin = "0.4"
http = "1"
hyper = { version = "1", features = ["http1", "http2", "client"] }
hyper-rustls = { version = "0.27.1", default-features = false, features = [
    "http1",
    "http2",
    "tls12",
    "logging",
] }
hyper-util = { version = "0.1", features = [
    "http1",
    "http2",
    "client",
    "client-legacy",
    "tokio",
] }
linked-hash-map = "0.5"
once_cell = "1.0"
parking_lot = "0.12"
percent-encoding = "2.1"
pin-project = "1.0"
rand = "0.8"
rand_pcg = "0.3"
refreshable = "2.0"
regex = "1.0"
rustls-pemfile = "2"
rustls = "0.23"
serde-value = "0.7"
serde = "1.0"
tokio-io-timeout = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1.0", features = ["io-util", "rt-multi-thread", "time"] }
tower-layer = "0.3"
tower-service = "0.3"
url = "2.0"
webpki-roots = "0.26"
witchcraft-log = "3"
witchcraft-metrics = "1"
zipkin = "0.4"

[dev-dependencies]
conjure-codegen = { version = "4.0.0-rc3", features = ["example-types"] }
futures-test = "0.3"
hyper = { version = "1", features = ["server"] }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "aws-lc-rs",
] }
openssl = "0.10.50"
serde_yaml = "0.9"
tokio-openssl = "0.6"
tokio-test = "0.4"
tokio = { version = "1.0", features = ["full"] }
tower-util = "0.3"
