[package]
name = "conjure-verification-api"
version = "1.1.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
publish = false
links = "conjure-verification"                       # a hack to pass info upstream to conjure-verification's build script

[build-dependencies]
attohttpc = "0.23"
conjure-codegen = "2"
flate2 = "1.0"
tar = "0.4"

[dependencies]
conjure-error = "2"
conjure-http = "2"
conjure-object = "2"
