[package]
name = "conjure-verification-api"
version = "2.1.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
publish = false
links = "conjure-verification"                       # a hack to pass info upstream to conjure-verification's build script

[build-dependencies]
attohttpc = "0.24"
conjure-codegen = "3"
flate2 = "1.0"
tar = "0.4"

[dependencies]
conjure-error = "3"
conjure-http = "3"
conjure-object = "3"
