[package]
name = "conjure-verification-api"
version.workspace = true
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
publish = false
links = "conjure-verification"                       # a hack to pass info upstream to conjure-verification's build script

[build-dependencies]
attohttpc = "0.28"
conjure-codegen = "4"
flate2 = "1.0"
tar = "0.4"

[dependencies]
conjure-error = "4"
conjure-http = "4"
conjure-object = "4"
