[package]
name = "conjure-verification"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
publish = false

[lib]
doctest = false
harness = false

[build-dependencies]
conjure-serde = "1"
serde_yaml = "0.8"
heck = "0.4"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

conjure-verification-api = { path = "../conjure-verification-api" }

[dependencies]
conjure-verification-api = { path = "../conjure-verification-api" }

[dev-dependencies]
conjure-object = "1"
conjure-error = "1"
conjure-http = "2"
conjure-serde = "1"
tokio = { version = "1.0", features = ["full"] }
witchcraft-metrics = "1"

conjure-runtime = { path = "../conjure-runtime" }
