[package]
name = "conjure-verification"
version.workspace = true
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
publish = false

[lib]
doctest = false
harness = false

[build-dependencies]
conjure-serde = "4"
serde_yaml = "0.9"
heck = "0.5"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

conjure-verification-api = { path = "../conjure-verification-api" }

[dependencies]
conjure-verification-api = { path = "../conjure-verification-api" }

[dev-dependencies]
conjure-object = "4"
conjure-error = "4"
conjure-http = "4"
conjure-serde = "4"
tokio = { version = "1.0", features = ["full"] }
witchcraft-metrics = "1"

conjure-runtime = { path = "../conjure-runtime" }
