[package]
name = "simulation"
version = "2.0.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"

[lib]
doctest = false
harness = false

[dev-dependencies]
async-stream = "0.3"
bytes = "1.0"
conjure-error = "3"
conjure-http = "3"
futures = "0.3"
http = "0.2"
http-body = "0.4"
parking_lot = "0.12"
rand = "0.8"
rand_pcg = "0.3"
tempfile = "3.0"
tokio = { version = "1.2", features = ["test-util"] }
witchcraft-metrics = "1"

conjure-runtime = { path = "../conjure-runtime" }
